--- a/anderleshop/src/pages/home/main.css
+++ b/anderleshop/src/pages/home/main.css
@@ -4,6 +4,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: ;
+    background: url("./images/formula.png");
     height: 100vh;
 }
