--- a/templates/pages/cart/cart.html
+++ b/templates/pages/cart/cart.html
@@ -25,7 +25,15 @@
 
     <!--Main-->
     <main>
+        <div id="menu">
+            <p id="cartName">Cart</p>
+            <p id="ShippingName">Shipping</p>
+            <p id="PaymentName">Payment</p>
+            <p id="DeliveryInfoName">Delivery information</p>
+        </div>
+        <div id="stuff">
 
+        </div>
     </main>
 
     <!--Footer-->
