--- a/templates/pages/catalogueItem/catalogueItem.html
+++ b/templates/pages/catalogueItem/catalogueItem.html
@@ -13,7 +13,7 @@
     <!--Footer-->
     <header>
         <div class="container">
-            <div class="logo">Logo</div>
+            <div class="logo"><img src="../images/logo.png" alt=""></div>
             <nav>
                 <a class="" href="#">Home</a>
                 <a class="" href="#">Contacts</a>
