Added lewisHamilton.png to images, created #images img{},in cart.css, made bunch of divs in cart.html

--- a/templates/pages/cart/cart.html
+++ b/templates/pages/cart/cart.html
@@ -32,7 +32,7 @@
             <p id="DeliveryInfoName">Delivery information</p>
         </div>
         <div id="stuff">
-
+            <div id="images"><img src="../images/lewisHamilton.png" alt="Lewis Hamilton F1 Car"></div>
         </div>
     </main>
 
