--- a/anderleshop/src/pages/home/main.css
+++ b/anderleshop/src/pages/home/main.css
@@ -11,11 +11,18 @@
     background-position: 0px -400px;
     height: 120vh;
 }
-.homeMain .container {
+.homeMain .container,
+.homeQuality .container{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+.homeQuality .container {
+    align-items: center;
+    justify-content: center;
+}
+
 .homeMain .container .h1,
 .homeQuality .container .h1{
     font-weight: 800;
@@ -23,11 +30,15 @@
 
     padding-bottom: 20px;
 }
-.homeMain .container button,
-.homeQuality .container button {
+.homeMain .container button {
     margin-bottom: 400px;
     font-size: 16px;
 }
+
+.homeQuality .container button {
+    font-size: 16px;
+}
+
 .homeQuality
 {
     display: flex;
@@ -35,10 +46,15 @@
     align-items: center;
     justify-content: center;
     background: url("./images/wheel.png");
+    background-blend-mode: multiply;
+    background-color: rgba(15, 8, 15, 0.65);
+
     background-size: 100% 100%;
-    background-position: 0px 00px;
+
     height: 100vh;
 }
+
+
 .homeComments
 {
     display: flex;
