--- a/templates/pages/cart/cart.html
+++ b/templates/pages/cart/cart.html
@@ -32,7 +32,17 @@
             <p id="DeliveryInfoName">Delivery information</p>
         </div>
         <div id="stuff">
-            <div id="images"><img src="../images/lewisHamilton.png" alt="Lewis Hamilton F1 Car"></div>
+            <div id="images">
+                <div class="informationBox">
+                    <img src="../images/lewisHamilton.png" alt="Lewis Hamilton F1 Car">
+                    <div class="imgDescription"></div>
+                </div>
+                <div class="informationBox">
+                    <img src="../images/HASSTHABEST.png" alt="Carlos Sainz 2023 edition img">
+                    <div class="imgDescription"></div>
+                </div>
+
+            </div>
         </div>
     </main>
 
