About us(Vojta je negr)

--- a/templates/pages/contacts/contacts.html
+++ b/templates/pages/contacts/contacts.html
@@ -13,7 +13,7 @@
     <!--Footer-->
     <header>
         <div class="container">
-            <div class="logo">Logo</div>
+            <div class="logo"><img src="../images/logo.png" alt="logo"></div>
             <nav>
                 <a class="" href="#">Home</a>
                 <a class="" href="#">Contacts</a>
@@ -25,13 +25,46 @@
 
     <!--Main-->
     <main>
+        <div class="conteiner contactsWrapper" >
+            <div class="card">
+            <div class="Horní">
+                <h1>#1</h1>
+                <h2>Vojta Anderle</h2>
+                <img src="./images/VojtaPhoto.png" alt="Vojta Anderle">
+            </div>
+            <div class="Dolek">    
+                <p>Position: Promoter, marketing-manager</p>
+                <p>Contacts: vojta.anderle08@gmail.com</p>
+                <p>Phone: +420 556 678 093</p>
+                <p>Retired 8-Time FoltinCars World Champion</p>
+            </div>
+            </div>
+              <div class="card">
+                <h1>#2</h1>
+                <h2>Matěj Foltín</h2>
+                <img src="./images/FoltinPhoto.png" alt="Matěj Foltín">
+                <p>Position: Noname</p>
+                <p>Contacts: matej.foltin@gmail.com</p>
+                <p>Phone: +420 774 286 897</p>
+                <p>Current World Champion of the FCWC</p>
+              </div>
+              <div class="card">
+                <h1>#3</h1>
+                <h2>Hlib Arseniuk</h2>
+                <img src="./images/HlibPhoto.png" alt="Hlib Arseniuk">
+                <p>Position: Full-Stack developer</p>
+                <p>Contacts: hlib.arseniuk.work@gmail.com</p>
+                <p>Phone: +420 349 834 222</p>
+                <p>Developer of Anderle OS</p>
+              </div>
+        </div>
     </main>
 
     <!--Footer-->
     <footer>
         <div class="container">
             <div class="footer-box">
-                <div class="footer-logo">Logo</div>
+                <div class="footer-logo"></div>
                 <div class="footer-main">
                     <div>Anderle.Corp@gmail.com</div>
                     <div>+420 324 344 111</div>
