--- a/templates/pages/aboutus/aboutus.html
+++ b/templates/pages/aboutus/aboutus.html
@@ -25,7 +25,37 @@
 
     <!--Main-->
     <main>
-        vojta je negrrr
+        <div class="container aboutUsWrapper">
+            <div class="content">
+              <h1>Welcome to the Anderle Shop</h1>
+              <h2>Co jsme zač</h2>
+              <p>Vítejte v Anderle Shop, unikátním obchodním ústavu, který nabízí zážitky, jež jsou stejně vzrušující jako závodní okruhy Formule 1. Naše zařízení, situované v srdci města, je více než jen prodejna; je to brána, kde se setkávají šampioni ze všech koutů multivesmíru.</p>
+              <h2>Naše Produkty:</h2>
+              <ul>
+                <li><b>Formule 1</b>: Nabízíme exkluzivní modely vozů Formule 1, které jsou symbolem rychlosti a inovace.</li>
+                <li><b>Volanty</b>: Naše volanty jsou vyrobeny s nejvyšší precizností, aby poskytovaly autentický zážitek z řízení.</li>
+                <li><b>Berle</b>: Pro ty, kteří potřebují podporu, máme širokou škálu berli, které kombinují funkčnost s designem.</li>
+                <li><b>Florbalky</b>: Sportovní nadšenci u nás najdou florbalky, které jsou synonymem pro kvalitu a odolnost.</li>
+                <li><b>Licencované Kradené Účty od LoL</b>: Pro hráče League of Legends nabízíme účty, které otevírají nové možnosti ve hře.</li>
+              </ul>
+              <h2>Naše Spolupráce:</h2>
+              <p>Jsme hrdí na naše partnerství s týmem <span class="red-bull">Red Bull</span>, které nám umožňuje být součástí závodní elity. Tato spolupráce nám přinesla nejen prestiž, ale i přátelství s <span class="red-bull">Maxem Verstappenem</span>, který je nejen naším ambasadorem, ale také pravidelným zákazníkem.</p>
+              <h2>Ocenění</h2>
+              <p>Byli jsme poctěni oceněním za nejlepší obchod, které nám předal sám <span class="red-bull">Max Verstappen</span>. Tento moment byl vrcholem naší práce a odhodlání poskytovat nejlepší služby a produkty.</p>
+              <div class="image-container">
+                <img src="./obrázek obchodu.png" alt="Obrázek 1">
+                <div class="overlay">
+                  Obrázek 1
+                </div>
+              </div>
+              <div class="image-container">
+                <img src="./image 38.png" alt="Obrázek 2">
+                <div class="overlay">
+                  Obrázek 2
+                </div>
+              </div>
+            </div>
+          </div>
     </main>
 
     <!--Footer-->
