--- a/templates/pages/cart/cart.html
+++ b/templates/pages/cart/cart.html
@@ -13,7 +13,7 @@
     <!--Footer-->
     <header>
         <div class="container">
-            <div class="logo">Logo</div>
+            <div class="logo"><img src="../images/logo.png" alt=""></div>
             <nav>
                 <a class="" href="#">Home</a>
                 <a class="" href="#">Contacts</a>
@@ -25,7 +25,7 @@
 
     <!--Main-->
     <main>
-        <div id="menu">
+        <div class="__animate__" id="menu">
             <p id="cartName">Cart</p>
             <p id="ShippingName">Shipping</p>
             <p id="PaymentName">Payment</p>
@@ -35,14 +35,18 @@
             <div id="images">
                 <div class="informationBox">
                     <img src="../images/lewisHamilton.png" alt="Lewis Hamilton F1 Car">
-                    <div class="imgDescription"></div>
+                    <div class="imgDescription">
+                        <p class="productName">W11 Lewis Hamilton special livery edition</p>
+                    </div>
                 </div>
                 <div class="informationBox">
-                    <img src="../images/HASSTHABEST.png" alt="Carlos Sainz 2023 edition img">
+                    <img src="../images/cartImages/HASSTHABEST (1).png" alt="K-MAG 2023 edition img">
                     <div class="imgDescription"></div>
                 </div>
 
             </div>
+            <p id="total">TOTAL: </p>
+            <button id="continueButton">Continue</div>
         </div>
     </main>
 
@@ -50,7 +54,7 @@
     <footer>
         <div class="container">
             <div class="footer-box">
-                <div class="footer-logo">Logo</div>
+                <div class="footer-logo"><img src="../images/logo.png" alt="" srcset=""></div>
                 <div class="footer-main">
                     <div>Anderle.Corp@gmail.com</div>
                     <div>+420 324 344 111</div>
