--- a/templates/pages/contacts/contacts.html
+++ b/templates/pages/contacts/contacts.html
@@ -25,38 +25,50 @@
 
     <!--Main-->
     <main>
-        <div class="conteiner contactsWrapper" >
-            <div class="card">
-            <div class="Horní">
-                <h1>#1</h1>
-                <h2>Vojta Anderle</h2>
-                <img src="./images/VojtaPhoto.png" alt="Vojta Anderle">
-            </div>
-            <div class="Dolek">    
-                <p>Position: Promoter, marketing-manager</p>
-                <p>Contacts: vojta.anderle08@gmail.com</p>
-                <p>Phone: +420 556 678 093</p>
-                <p>Retired 8-Time FoltinCars World Champion</p>
-            </div>
-            </div>
-              <div class="card">
-                <h1>#2</h1>
-                <h2>Matěj Foltín</h2>
-                <img src="./images/FoltinPhoto.png" alt="Matěj Foltín">
-                <p>Position: Noname</p>
-                <p>Contacts: matej.foltin@gmail.com</p>
-                <p>Phone: +420 774 286 897</p>
-                <p>Current World Champion of the FCWC</p>
-              </div>
-              <div class="card">
-                <h1>#3</h1>
-                <h2>Hlib Arseniuk</h2>
-                <img src="./images/HlibPhoto.png" alt="Hlib Arseniuk">
-                <p>Position: Full-Stack developer</p>
-                <p>Contacts: hlib.arseniuk.work@gmail.com</p>
-                <p>Phone: +420 349 834 222</p>
-                <p>Developer of Anderle OS</p>
-              </div>
+        <div class="conteiner contactsWrapper">
+            <a href="https://github.com/Megalodunecek" class="card">
+                <div class="cart-up">
+                    <h2>Vojta Anderle</h2>
+                    <img src="./images/VojtaPhoto.png" alt="Vojta Anderle">
+                    <h1>#1</h1>
+
+                </div>
+                <div class="cart-down">    
+                    <div>Promoter, marketing-manager</div>
+                    <div>vojta.anderle08@gmail.com</div>
+                    <div>+420 556 678 093</div>
+                    <div>Retired 8-Time FCWC</div>
+                </div>
+            </a>
+
+            <a href="https://github.com/Matej3343" class="card">
+                <div class="cart-up">
+                    <h1>#2</h1>
+                    <h2>Matěj Foltín</h2>
+                    <img src="./images/FoltinPhoto.png" alt="Matěj Foltín">
+                </div>
+                <div class="cart-down">  
+                    <div>Noname</div>
+                    <div>matej.foltin@gmail.com</div>
+                    <div>+420 774 286 897</div>
+                    <div>Current World Champion of the FCWC</div>
+                </div>
+            </a>
+
+            <a href="https://github.com/Glebegor" class="card">
+                <div class="cart-up">
+                    <h1>#3</h1>
+                    <h2>Hlib Arseniuk</h2>
+                    <img src="./images/HlibPhoto.png" alt="Hlib Arseniuk">
+                </div>
+
+                <div class="cart-down">
+                    <div>Full-Stack developer</div>
+                    <div>hlib.arseniuk.work@gmail.com</div>
+                    <div>+420 349 834 222</div>
+                    <div>Developer of Anderle OS</div>
+                </div>
+            </a>
         </div>
     </main>
 
