--- a/templates/pages/aboutus/aboutus.html
+++ b/templates/pages/aboutus/aboutus.html
@@ -13,7 +13,7 @@
     <!--Footer-->
     <header>
         <div class="container">
-            <div class="logo">Logo</div>
+            <div class="logo"></div>
             <nav>
                 <a class="" href="#">Home</a>
                 <a class="" href="#">Contacts</a>
