--- a/templates/pages/aboutus/aboutus.css
+++ b/templates/pages/aboutus/aboutus.css
@@ -4,7 +4,7 @@ body {
     font-family: sans-serif;
     background-image: url(./obrázek\ obchodu.png);
     background-size: 100px;
-    color: #333;
+    color: #0F080F;
   }
 
 
@@ -12,17 +12,9 @@ body {
     text-align: center;
     padding: 20px;
     max-width: 800px;
-    background-color: #000000;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
-
-  .content h1 {
-    font-size: 48px;
-    margin-bottom: 20px;
-    color: #ff0000;
-  }
-
   .content p {
     font-size: 18px;
     line-height: 1.6;
@@ -44,42 +36,29 @@ body {
     color: rgb(255, 255, 255);
   }
 
-  .image-container {
-    position: relative;
-    width: 100%;
-    height: 500px;
-    overflow: hidden;
-    margin-bottom: 20px;
-    background-position: 30px;
-  }
+  
 
-  .image-container img {
-    width: 100%;
-    height: auto;
-  }
+.aboutUsMain {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background: url("./images/image\ 37.png");
+  background-repeat: no-repeat;
+  background-color: #333;
+  background-blend-mode: multiply;
+  box-shadow: inset 0px 0px 100px 50px #0F080F;
+  background-size: 100% 150%;
+}
+.aboutUsMain h1 {
+  width: 100%;
+  font-size: 48px;
+  margin-bottom: 20px;
+  color: #FFF7FD ;
+}
 
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 36px;
-    font-weight: bold;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-
-  .image-container:hover .overlay {
-    opacity: 1;
-  }
-  .aboutUsWrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.aboutUsItem
+{
+  padding: 50px;
+}
