--- a/anderleshop/src/ui/textarea/main.css
+++ b/anderleshop/src/ui/textarea/main.css
@@ -5,5 +5,7 @@
     width: 100%;
     border-radius: 15px;
     padding: 10px 20px;
+    border: none;
+    outline: none;
     box-sizing: border-box;
 }
