--- a/templates/pages/cart/cart.css
+++ b/templates/pages/cart/cart.css
@@ -22,11 +22,11 @@
 }
 #images img{
     padding-left: 10%;
-    width: 40%;
-    height: 50%;
-    margin: auto;
-    margin-left: 0;
-    margin-right: 0;
+    width: 80%;
+    height: 90%;
+    margin: 0%;
+    margin-top: 2%;
+    box-sizing: border-box;
 }
 main{
     background-image: url("../images/AudiF1CarIsGoated.png");
@@ -37,8 +37,9 @@ main{
     background-color: #ffffff;
     color: black;
     width: 40%;
-    height: 50%;
+    height: 100%;
     margin: 0;
+    padding: 0;
 }
 #cartName{
     color:#E01506;
@@ -57,11 +58,37 @@ main{
     font-size: 24;
 }
 .informationBox{
+    height: 120%;
     display: flex;
 }
 .productName{
     vertical-align: text-top;
     text-align: left;
     padding: 0%;
-    font-size: 80%;
+    font-size: 20px;
+    margin: 0%;    
+}
+#images  img.stars{
+    padding: 0%;
+}
+.Prize{
+    margin: 0;
+    margin-top: 27px;
+}
+.informationBox .removeButton{
+    border-style: solid;
+    border-radius: 0px;
+    border-color: #E01506;
+    background-color: #E01506;
+    color: #ffffff;
+    width: 6%;
+    height: 6%;
+    left: 57%;
+    margin-top: 6%;
+    position: absolute;
+    font-size: 17px;
+    /*flexbox*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
