--- a/templates/pages/cart/cart.html
+++ b/templates/pages/cart/cart.html
@@ -34,14 +34,17 @@
         <div id="stuff">
             <div id="images">
                 <div class="informationBox">
-                    <img src="../images/lewisHamilton.png" alt="Lewis Hamilton F1 Car">
-                    <div class="imgDescription">
-                        <p class="productName">W11 Lewis Hamilton special livery edition</p>
-                    </div>
+                    <img src="../images/cartImages/lewisHamiltonCartIMG.png" alt="Lewis Hamilton F1 Car">
+                    <!--- <div class="imgDescription">
+                        <p class="productName" >W11 Lewis Hamilton special livery edition</p>
+                        <p class="Prize">$Prize</p>
+                        <img class="stars" src="../images/cartImages/FourStars.png" alt="FourStars">
+                    </div> --->
+                    <button class="removeButton">Remove</button>
                 </div>
                 <div class="informationBox">
-                    <img src="../images/cartImages/HASSTHABEST (1).png" alt="K-MAG 2023 edition img">
-                    <div class="imgDescription"></div>
+                    <img src="../images/HASSTHABEST.png" alt="K-MAG 2023 edition img">
+                    <button class="removeButton">Remove</button>
                 </div>
 
             </div>
