--- a/anderleshop/public/main.css
+++ b/anderleshop/public/main.css
@@ -3,10 +3,22 @@
 
 * {
     --main-black: #0F080F;
+    --main-black-low: #2c292c;
+    --main-black-lower: #292529;
+    --main-black-lowest: #595459;
+
     --main-red-black: #940E04;
     --main-red: #B61105;
+
     --main-red-white: #E01506;
+
     --main-white: #FFF7FD;
+    --main-white-low: #FFF4F4;
+    --main-white-lower: #F6EDED;
+    --main-white-lowest: #F5E1E1;
+
+    --main-white-star: #CBBFBF;
+    --main-active-star: #E01506;
 
 
     padding: 0px;
