--- a/AnderleHaus/AnderleHaus.css
+++ b/AnderleHaus/AnderleHaus.css
@@ -1,6 +1,7 @@
 body {
     font-family: sans-serif;
     margin: 0;
+    background-color:black ;
   }
   .container {
     display: flex;
@@ -8,6 +9,7 @@ body {
   .left-column {
     width: 50%;
     padding: 20px;
+    color: aliceblue;
   }
   .right-column {
     width: 50%;
