--- a/anderleshop/src/modules/sliderCatalogue/main.css
+++ b/anderleshop/src/modules/sliderCatalogue/main.css
@@ -1,4 +1,4 @@
-.slider-catalogue
+.slider-catalogue-cat
 {
     width: 100%;
     height: 400px;
@@ -8,12 +8,13 @@
     justify-content: center;
     align-items: center;
 }
-.slider-tape
+.slider-tape-cat
 {
+    display: flex;
     height: 100%;
     min-width: 100%;
 }
-.slider-item
+.slider-item-cat
 {
     opacity: 1;
     padding: 0px;
@@ -21,7 +22,7 @@
     height: 100%;
 }
 
-.slider-item img
+.slider-item-cat img
 {
     opacity: 1;
     width: 100%;
