--- a/anderleshop/src/pages/catalogue/main.css
+++ b/anderleshop/src/pages/catalogue/main.css
@@ -84,7 +84,7 @@
     background: var(--main-white-lowest);
 
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: start;
     flex-wrap: wrap;
 
