--- a/templates/pages/AnderleHaus/AnderleHaus.html
+++ b/templates/pages/AnderleHaus/AnderleHaus.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="AnderleHaus.css" rel="stylesheet">
     <link href="../main.css" rel="stylesheet">
-    <title>aboutus</title>
+    <title>AnderleHaus</title>
 </head>
 <body>
     <!--Footer-->
