--- a/templates/pages/AnderleHaus/AnderleHaus.html
+++ b/templates/pages/AnderleHaus/AnderleHaus.html
@@ -13,7 +13,7 @@
     <!--Footer-->
     <header>
         <div class="container">
-            <div class="logo"></div>
+            <div class="logo"><img src="../images/logo.png" alt="logo"></div>
             <nav>
                 <a class="" href="#">Home</a>
                 <a class="" href="#">Contacts</a>
