--- a/templates/pages/AnderleHaus/AnderleHaus.html
+++ b/templates/pages/AnderleHaus/AnderleHaus.html
@@ -27,25 +27,25 @@
     <main>
         <div class="container">
             <div class="left-column">
-              <h1>Welcome to AnderleHaus</h1>
-              <div class="info-text">
+              <h1 class="__animate__left">Welcome to AnderleHaus</h1>
+              <div class="info-text __animate__right">
                 AnderleHaus is one of the world's largest shopping centers with an area of 1,270,000 m2.
               </div>
-              <div class="info-text">
+              <div class="info-text __animate__left">
                 <strong>F1 Track:</strong> Experience the thrill of Formula 1 on our unique track. Perfect for speed lovers and adrenaline seekers.
               </div>
-              <div class="info-text">
+              <div class="info-text __animate__right">
                 <strong>Map of ANDERLEHAUS:</strong> Find your way to our attractions with the interactive map. All shops and entertainment zones at your fingertips.
               </div>
-              <div class="info-text">
+              <div class="info-text __animate__left">
                 <strong>Museum of Arseniuk:</strong> Explore the fascinating history and achievements of the Arseniuk FCWC team. Get inspired by their legendary performances.
               </div>
-              <div class="info-text">
+              <div class="info-text __animate__right">
                 <strong>FCWC Team:</strong> Join the fans of the FCWC team and support your favorite players. Together, we celebrate every victory!
               </div>
-              <div class="info-text">
+              <div class="info-text __animate__left">
                 <strong>ANDERLEHAUS DOPORUČUJE PLÁNOVANOU ÚDRŽBU, KTEROU POSKYTUJEME:</strong>
-                <ul>
+                <ul class="__animate__right">
                   <li>Servis brzdové kapaliny</li>
                   <li>Výměna kabinového filtru</li>
                   <li>Výměna spojky</li>
@@ -57,15 +57,13 @@
                   <li>Služby pro upgrade výkonu</li>
                 </ul>
               </div>
-              <div class="info-text">
+              <div class="info-text __animate__left">
                 AnderleHaus also contains one of the best F1 tracks, with an area of 4,272m.
               </div>
             </div>
-            <div class="right-column">
-              <img src="./obrázek obchodu.png" alt="Red Bull Store">
               <div class="map-container">
-                <img class="map" src="./image 59.png" alt="Map 1">
-                <img class="map" src="./image 60.png" alt="Map 2">
+                <img class="map" src="./image 60.png" alt="map1">
+                <img class="map" src="./image 59.png" alt="map2">
               </div>
             </div>
           </div>
@@ -75,7 +73,6 @@
     <footer>
         <div class="container">
             <div class="footer-box">
-                <div class="footer-logo">Logo</div>
                 <div class="footer-main">
                     <div>Anderle.Corp@gmail.com</div>
                     <div>+420 324 344 111</div>
