--- a/anderleshop/src/pages/contacts/main.css
+++ b/anderleshop/src/pages/contacts/main.css
@@ -7,14 +7,5 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-}
-.contacts-cart
-{
-    width: 33%;
-    height: 200px;
-    border-radius: 20px;
-    background: var(--main-red);
-    margin: 20px;
-    box-sizing: border-box;
+    height: 100%;
 }
