--- a/anderleshop/src/modules/footer/main.css
+++ b/anderleshop/src/modules/footer/main.css
@@ -6,5 +6,15 @@
     padding: 20px 0;
 }
 .footer-logo img{
+    transition: .3s;
     height: 75px;
+}
+.footer-logo
+{
+    cursor: pointer;
+    transition: .3s;
+}
+.footer-logo:hover{
+    cursor: pointer;
+    transform: scale(1.2);
 }
