--- a/anderleshop/src/pages/cart/main.css
+++ b/anderleshop/src/pages/cart/main.css
@@ -16,13 +16,25 @@
 }
 .cart-wrapper
 {
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    flex-direction: column;
     width: 40%;
     height: 500px;
-    padding: 20px;
     box-sizing: border-box;
     border-radius: 20px;
     color: var(--main-black);
     background: var(--main-white-low);
+}
+.cart-title
+{
+    padding: 20px;
+}
+.cart-info
+{
+    padding: 20px;
+
 }
 .cart-menu
 {
@@ -34,11 +46,15 @@
 }
 .cart-items-wrapper
 {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+
+    background: var(--main-white-lowest);
     width: 100%;
-    height: 300px;
-    overflow-y: auto;
+    height: 100%;
+    overflow-y: scroll;
     padding: 20px;
     box-sizing: border-box;
-    border-radius: 20px;
-    background: var(--main-white-low);
 }
