--- a/templates/pages/catalogueItem/catalogueItem.html
+++ b/templates/pages/catalogueItem/catalogueItem.html
@@ -25,7 +25,33 @@
 
     <!--Main-->
     <main>
-
+  <div class="container">
+    <div class="product">
+      <img src="./img/ithem 1.png" alt="RB 20 Checo Pařez edition" class="product-image">
+      <div class="product-details">
+        <h2>RB 20 Checo Pařez edition</h2>
+        <p class="product-description">Max speed = 397 km/h, redbull livery, Pirrelli tyres, NT Cooling, NG DRS, comfortable seat, Adrian Newey aerodinamics, 5400 mm length, 2000 mm width, 940 mm height (excluding roll-hoop T-camera)</p>
+        <ul class="product-features">
+          <li>Protective film 100 000 USD,-</li>
+          <li>1 year warranty 3 000 000 USD,-</li>
+        </ul>
+        <div class="product-price">
+          <p>Price: 1 000 000 USD,-</p>
+        </div>
+      </div>
+    </div>
+    <div class="product">
+      <img src="./img/ithem2.png" alt="RB 19 Max Verstappen" class="product-image">
+      <div class="product-details">
+        <h2>RB19 Max Verstappen</h2>
+        <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        <div class="product-price">
+          <p>Price: 1 000 000 USD,-</p>
+        </div>
+        <button class="add-to-cart">Add to cart</button>
+      </div>
+    </div>
+  </div>
     </main>
 
     <!--Footer-->
