--- a/templates/pages/deliveryInfo/deliveryInfo.html
+++ b/templates/pages/deliveryInfo/deliveryInfo.html
@@ -5,12 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./cart.css" rel="stylesheet">
+    <link href="../deliveryInfo/deliveryInfo.css" rel="stylesheet">
     <link href="../main.css" rel="stylesheet">
-    <title>cart</title>
+    <title>Delivery information</title>
 </head>
 <body>
-    <!--Footer-->
+    <!--Header-->
     <header>
         <div class="container">
             <div class="logo"><img src="../images/logo.png" alt=""></div>
@@ -32,24 +32,35 @@
             <p id="DeliveryInfoName">Delivery information</p>
         </div>
         <div id="stuff">
-            <div id="images">
-                <div class="informationBox">
-                    <img src="../images/cartImages/lewisHamiltonCartIMG.png" alt="Lewis Hamilton F1 Car">
-                    <!--- <div class="imgDescription">
-                        <p class="productName" >W11 Lewis Hamilton special livery edition</p>
-                        <p class="Prize">$Prize</p>
-                        <img class="stars" src="../images/cartImages/FourStars.png" alt="FourStars">
-                    </div> --->
-                    <button class="removeButton">Remove</button>
+            <h1>Delivery information</h1>
+            <form>
+                <div></div>
+                <div id="input">
+                    <label for="firstName">Full Name</label>
+                    <input type="text" name="firstName" id="firstName">
                 </div>
-                <div class="informationBox">
-                    <img src="../images/HASSTHABEST.png" alt="K-MAG 2023 edition img">
-                    <button class="removeButton">Remove</button>
+                <div id="input">
+                    <label for="firstName">E-mail</label>
+                    <input type="text" name="firstName" id="firstName">
                 </div>
-
-            </div>
-            <p id="total">TOTAL: </p>
-            <a id="continueButton" href="../shipping/shipping.html">Continue</a>
+                <div id="input">
+                    <label for="firstName">Phone</label>
+                    <input type="text" name="firstName" id="firstName">
+                </div>
+                <div id="input">
+                    <label for="firstName">Adress</label>
+                    <input type="text" name="firstName" id="firstName">
+                </div>
+                <div id="input">
+                    <label for="firstName">Postal code</label>
+                    <input type="text" name="firstName" id="firstName">
+                </div>
+                <div id="input">
+                    <label for="firstName">AnderlePayCode</label>
+                    <input type="text" name="firstName" id="firstName">
+                </div>
+            </form>
+            <a id="continueButton" href="../deliveryInfo/deliveryInfo.html">Submit</a>
         </div>
     </main>
 
@@ -57,7 +68,7 @@
     <footer>
         <div class="container">
             <div class="footer-box">
-                <div class="footer-logo"><img src="../images/logo.png" alt="" srcset=""></div>
+                <div class="footer-logo">Logo</div>
                 <div class="footer-main">
                     <div>Anderle.Corp@gmail.com</div>
                     <div>+420 324 344 111</div>
@@ -70,6 +81,6 @@
 
     <!--Scripts-->
     <script src="../main.js"></script>
-    <script src="./cart.js"></script>
+    <script src="./catalogueItem.js"></script>
 </body>
 </html>
