Revert "Vojta/front"

--- a/templates/pages/cart/cart.html
+++ b/templates/pages/cart/cart.html
@@ -13,7 +13,7 @@
     <!--Footer-->
     <header>
         <div class="container">
-            <div class="logo"><img src="../images/logo.png" alt=""></div>
+            <div class="logo">Logo</div>
             <nav>
                 <a class="" href="#">Home</a>
                 <a class="" href="#">Contacts</a>
@@ -25,31 +25,14 @@
 
     <!--Main-->
     <main>
-        <div class="__animate__" id="menu">
+        <div id="menu">
             <p id="cartName">Cart</p>
             <p id="ShippingName">Shipping</p>
             <p id="PaymentName">Payment</p>
             <p id="DeliveryInfoName">Delivery information</p>
         </div>
         <div id="stuff">
-            <div id="images">
-                <div class="informationBox">
-                    <img src="../images/cartImages/lewisHamiltonCartIMG.png" alt="Lewis Hamilton F1 Car">
-                    <!--- <div class="imgDescription">
-                        <p class="productName" >W11 Lewis Hamilton special livery edition</p>
-                        <p class="Prize">$Prize</p>
-                        <img class="stars" src="../images/cartImages/FourStars.png" alt="FourStars">
-                    </div> --->
-                    <button class="removeButton">Remove</button>
-                </div>
-                <div class="informationBox">
-                    <img src="../images/HASSTHABEST.png" alt="K-MAG 2023 edition img">
-                    <button class="removeButton">Remove</button>
-                </div>
 
-            </div>
-            <p id="total">TOTAL: </p>
-            <a id="continueButton" href="../shipping/shipping.html">Continue</a>
         </div>
     </main>
 
@@ -57,7 +40,7 @@
     <footer>
         <div class="container">
             <div class="footer-box">
-                <div class="footer-logo"><img src="../images/logo.png" alt="" srcset=""></div>
+                <div class="footer-logo">Logo</div>
                 <div class="footer-main">
                     <div>Anderle.Corp@gmail.com</div>
                     <div>+420 324 344 111</div>
