added logo in payment.html and deliveryInfo.hmtl

--- a/templates/pages/payment/payment.html
+++ b/templates/pages/payment/payment.html
@@ -75,7 +75,7 @@
     <footer>
         <div class="container">
             <div class="footer-box">
-                <div class="footer-logo">Logo</div>
+                <div class="footer-logo"><img src="../images/logo.png" alt="" srcset=""></div>
                 <div class="footer-main">
                     <div>Anderle.Corp@gmail.com</div>
                     <div>+420 324 344 111</div>
