--- a/templates/pages/payment/payment.html
+++ b/templates/pages/payment/payment.html
@@ -15,10 +15,10 @@
         <div class="container">
             <div class="logo"><img src="../images/logo.png" alt=""></div>
             <nav>
-                <a class="" href="#">Home</a>
-                <a class="" href="#">Contacts</a>
-                <a class="" href="#">About us</a>
-                <a class="" href="#">Catalogue</a>
+                <a class="" href="../home/home.html">Home</a>
+                <a class="" href="../contacts/contacts.html">Contacts</a>
+                <a class="" href="../aboutus/aboutus.html">About us</a>
+                <a class="" href="../catalogue/catalogue.html">Catalogue</a>
             </nav>
         </div>
     </header>
