Added catalogue item.

--- a/anderleshop/src/pages/cart/main.css
+++ b/anderleshop/src/pages/cart/main.css
@@ -58,3 +58,10 @@
     padding: 20px;
     box-sizing: border-box;
 }
+.cartName.active,
+.ShippingName.active,
+.PaymentName.active,
+.DeliveryInfoName.active
+{
+    color: var(--main-red);
+}
