--- a/anderleshop/src/pages/catalogueItem/main.css
+++ b/anderleshop/src/pages/catalogueItem/main.css
@@ -15,6 +15,7 @@
 }
 .catalogueItem .container h1
 {
+    padding-top: 100px;
     font-size: 56px;
 }
 
@@ -35,19 +36,36 @@
     justify-content: space-between;
     flex-direction: column;
 }
-.catalogueItemMainPhotos
+img.catalogueItemMainPhotos
 {
     width: 100%;
-    height: 70%;
-    margin: 20px;
-    box-sizing: border-box;
+    height: 500px;
+    margin: 15px;
 }
 .catalogueItemPhotosSlider
 {
     width: 100%;
-    background: pink;
+    overflow:hidden;
     height: 100%;
     box-sizing: border-box;
+}
+.catalogueItemPhotosSliderTape
+{
+    height: 100%;
+    min-width: 100%;
+}
+.catSliderItem
+{
+    padding: 5px 10px;
+    box-sizing: border-box;
+    width: 25%;
+    height: 100%;
+    display: inline-block;
+}
+.catSliderItem img
+{
+    width: 100%;
+    height: 100%;
 }
 .catalogueItemDescription
 {
