--- a/anderleshop/src/modules/header/main.css
+++ b/anderleshop/src/modules/header/main.css
@@ -74,3 +74,10 @@
     width: 30px;
     margin-left: 25px;
 }
+
+
+@media (max-width: 768px) {
+    .header .container{
+        flex-direction: column;
+    }
+}
