--- a/anderleshop/src/pages/layout/main.css
+++ b/anderleshop/src/pages/layout/main.css
@@ -3,3 +3,20 @@
     width: 1280px;
     margin: 0 auto;
 }
+
+@media (max-width: 1440px) {
+    .container {
+        width: 90%;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        width: 100%!important;
+        padding: 20px;
+        box-sizing: border-box;
+        margin: 0px;
+    }
+}
+
+
