Adap for every pages. Project ready.

--- a/anderleshop/src/modules/footer/main.css
+++ b/anderleshop/src/modules/footer/main.css
@@ -18,3 +18,10 @@
     cursor: pointer;
     transform: scale(1.2);
 }
+
+@media (max-width: 768px) {
+    .copyRight
+    {
+        text-align: center;
+    }
+}
