--- a/anderleshop/src/components/catItem/main.css
+++ b/anderleshop/src/components/catItem/main.css
@@ -52,3 +52,15 @@
     width: 100%;
     box-sizing: border-box;
 }
+
+
+@media (max-width: 1024px) {
+    .catItem
+    {
+        width: 100%;
+    }
+    .catItemImg
+    {
+        height: 400px;
+    }
+}
