--- a/anderleshop/src/pages/catalogue/main.css
+++ b/anderleshop/src/pages/catalogue/main.css
@@ -101,3 +101,13 @@
     padding: 20px;
 
 }
+
+@media (max-width: 1024px) {
+    .catalogueShopperFilter {
+        display: none;
+    }
+    .catalogueOrders {
+        grid-column: 1 / -1; /* Span across all columns */
+
+    }
+}
