Made js in cart

--- a/templates/pages/cart/cart.html
+++ b/templates/pages/cart/cart.html
@@ -51,6 +51,7 @@
             <p id="total">TOTAL: </p>
             <a id="continueButton" href="../shipping/shipping.html">Continue</a>
         </div>
+        <button onclick="Onclick()">NerveButton</button>
     </main>
 
     <!--Footer-->
@@ -61,6 +62,7 @@
                 <div class="footer-main">
                     <div>Anderle.Corp@gmail.com</div>
                     <div>+420 324 344 111</div>
+                    <p>Nerve button clicked <span id="demo">0</span> times.</p>
                 </div>
 
                 <div class="footer-bottom">© 2024 Matěj Foltín, Vojtěch Anderle, Hlib Arseniuk, all rights received</div>
